{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 8,
  "lineage": "4b42c9b1-c2a6-13a3-6935-e2a7c6c57f1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fe18bc3cfa53a248",
            "arn": "arn:aws:ec2:us-east-2:329832980603:instance/i-0a62e8d38f971f891",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a62e8d38f971f891",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-073cdb3674d4d41fa"
              }
            ],
            "primary_network_interface_id": "eni-073cdb3674d4d41fa",
            "private_dns": "ip-10-0-1-172.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.172",
            "public_dns": "ec2-3-138-172-145.us-east-2.compute.amazonaws.com",
            "public_ip": "3.138.172.145",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0443ceb8922113b85",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-074ed564a8044c929",
            "tags": {
              "Name": "devops-project-server"
            },
            "tags_all": {
              "Name": "devops-project-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09bf82e5535ec5ef0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "i-0a62e8d38f971f891",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:329832980603:internet-gateway/igw-07eb8d263de1a7b27",
            "id": "igw-07eb8d263de1a7b27",
            "owner_id": "329832980603",
            "region": "us-east-2",
            "tags": {
              "Name": "devops-project-igw"
            },
            "tags_all": {
              "Name": "devops-project-igw"
            },
            "vpc_id": "vpc-0748f82c356cdbfdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "igw-07eb8d263de1a7b27",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:329832980603:route-table/rtb-07b92d7c152d1d66b",
            "id": "rtb-07b92d7c152d1d66b",
            "owner_id": "329832980603",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07eb8d263de1a7b27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0748f82c356cdbfdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "rtb-07b92d7c152d1d66b",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd50a916e986640",
            "region": "us-east-2",
            "route_table_id": "rtb-07b92d7c152d1d66b",
            "subnet_id": "subnet-074ed564a8044c929"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "rtbassoc-0acd50a916e986640",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:329832980603:security-group/sg-09bf82e5535ec5ef0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bf82e5535ec5ef0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops-project-sg",
            "name_prefix": "",
            "owner_id": "329832980603",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0748f82c356cdbfdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "sg-09bf82e5535ec5ef0",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:329832980603:subnet/subnet-074ed564a8044c929",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074ed564a8044c929",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "329832980603",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "devops-project-subnet"
            },
            "tags_all": {
              "Name": "devops-project-subnet"
            },
            "vpc_id": "vpc-0748f82c356cdbfdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "subnet-074ed564a8044c929",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:329832980603:vpc/vpc-0748f82c356cdbfdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c5ba7b636323ef6",
            "default_route_table_id": "rtb-05712b34d1ae8c06d",
            "default_security_group_id": "sg-0a680a1407543c3ea",
            "dhcp_options_id": "dopt-0e880518abe96e50c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0748f82c356cdbfdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05712b34d1ae8c06d",
            "owner_id": "329832980603",
            "region": "us-east-2",
            "tags": {
              "Name": "devops-project-vpc"
            },
            "tags_all": {
              "Name": "devops-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "329832980603",
            "id": "vpc-0748f82c356cdbfdc",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}